feat(integrations): re-add ClearLag/mcMMO/Orebfuscator/ItemsAdder hooks via reflection
These soft-dependency hooks were stubbed off during the Java-8 port because their APIs
are Java-17 bytecode (unreadable by the Java-8 javac toolchain). Rewrite them to call
their plugin APIs purely reflectively - no third-party type in the compiled bytecode -
so they compile on Java 8 and re-activate at runtime when the plugin is present:
- Orebfuscator: reflective service lookup + deobfuscate() on Slimefun's own events
- ClearLag: dynamic EventExecutor for its EntityRemoveEvent, reflective list pruning
- mcMMO: reflective getPlaceStore/SkillUtils + dynamic salvage-event handler;
  isEventFaked (FakeEvent marker) and removeTemporaryEnchantments wired reflectively
- ItemsAdder: isCustomBlock/isCustomItem via reflective CustomBlock/CustomStack
IntegrationsManager now detects each plugin and registers guarded. WorldEdit and
PlaceholderAPI remain excluded - their hooks must subclass a third-party class
(AbstractDelegateExtent / PlaceholderExpansion), impossible without the Java-17 dep.
No modern-server regression (1.20.6 still loads 555 items).